--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-session": "^1.17.2",
     "fetch-node": "^0.0.1",
     "http-errors": "~1.6.3",
     "jade": "^0.29.0",
+    "method-override": "^3.0.0",
     "morgan": "~1.9.1",
     "mysql2": "^2.3.2",
     "node-fetch": "^3.0.0",
