--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "morgan": "~1.9.1",
     "mysql2": "^2.3.2",
     "node-fetch": "^3.0.0",
+    "request": "^2.88.2",
     "sequelize": "^6.8.0"
   }
 }
