--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "method-override": "^3.0.0",
     "morgan": "~1.9.1",
     "mysql2": "^2.3.2",
+    "mz": "^2.7.0",
     "node-fetch": "^3.0.0",
+    "pdf-toolz": "^1.1.8",
     "request": "^2.88.2",
     "sequelize": "^6.8.0"
   }
