--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jade": "^0.29.0",
     "method-override": "^3.0.0",
     "morgan": "~1.9.1",
+    "multer": "^1.4.3",
     "mysql2": "^2.3.2",
     "mz": "^2.7.0",
     "node-fetch": "^3.0.0",
