--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mysql2": "^2.3.2",
     "mz": "^2.7.0",
     "node-fetch": "^3.0.0",
+    "pdf-lib": "^1.17.0",
     "pdf-toolz": "^1.1.8",
     "request": "^2.88.2",
     "sequelize": "^6.8.0"
